# rwscript

./: Cargo.toml  README.md  lang.bnf
core/: Cargo.toml
core/src/: lib.rs
core/src/lexer/: general.rs  keyword.rs  literal.rs  mark.rs  mod.rs  special.rs
core/src/parser/: mod.rs
core/tests/lexer/: literal_test.rs  mod.rs
