[package]
name = "rwscript_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.7.3" }
lazy_static = { version = "1.4.0" }
lazy-regex = { version = "2.5.0"}
anyhow = { version = "1.0.70" }